Fix Gap

--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -16,7 +16,7 @@
     margin-top: 269px;
   }
   section.spacer-logo {
-    margin-bottom:79px;
+    margin-bottom:190px;
   }
 
 }
